# inapos

./: .env.example  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  README.id.md  README.md  index.html  package.json  vite.config.ts
.agents/skills/heroui-react/: SKILL.md
.github/workflows/: tauri-desktop.yml  tauri-mobile.yml
docs/: README.md  ai-assistant.md  architecture.md  build-and-release.md  data-and-sync.md  localization.md  modules.md  project-structure.md  setup.md  tauri-github-actions.md  troubleshooting.md
powersync/: demo-seed.sql  schema.sql  sync-rules.yaml
public/@powersync/@powersync/worker/: SharedSyncImplementation.umd.js  WASQLiteDB.umd.js
src/: auth.ts  env.ts  main.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_data.rs  lib.rs  main.rs
src/components/submodules/: ai-models-module.tsx  alerts-module.tsx  assistant-module.tsx  cash-module.tsx  cashier-module.tsx  customers-module.tsx  dashboard-module.tsx  devices-sync-module.tsx  expenses-module.tsx  index.ts  orders-module.tsx  product-list-module.tsx  promo-module.tsx  purchases-module.tsx  reports-module.tsx  stock-module.tsx  store-settings-module.tsx  suppliers-module.tsx  today-activity-module.tsx  users-module.tsx
src/lib/: ai-http.ts  ai-provider.ts  assistant.ts  i18n.tsx  ollama.ts  organization.ts  powersync.tsx
src/routes/: __root.tsx  index.tsx
src/routes/auth/: forgot-password.tsx  sign-in.tsx  sign-up.tsx
src/routes/setup/: store.tsx
src/routes/stores/: $storeSlug.tsx
