[package]
name = "inapos"
version = "0.1.0"
description = "INAPOS desktop application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inapos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aisdk = { version = "0.5.2", features = ["openai", "openaicompatible", "openrouter", "axum"] }
aes-gcm-siv = "0.11.1"
axum = { version = "0.8.4", features = ["json"] }
futures = "0.3.31"
rand = "0.8.5"
rusqlite = "0.37.0"
sha2 = "0.10.9"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.6", features = ["cors"] }
